Fix header z-index

--- a/src/BlazorUI/Demo/Client/Shared/Pages/Components/Overlay/BitOverlayDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Pages/Components/Overlay/BitOverlayDemo.razor.scss
@@ -2,15 +2,17 @@
 @import "../../../Styles/abstracts/_functions.scss";
 
 .content {
-    width: 85%;
+    width: 87%;
     display: flex;
-    height: rem(250px);
+    overflow: scroll;
     position: relative;
     padding: rem(15px);
     max-width: rem(960px);
+    max-height: rem(288px);
     border-radius: rem(3px);
     flex-flow: column nowrap;
     background-color: $bit-color-background-primary;
+    border: $bit-color-primary-main solid rem(1.6px);
 }
 
 .scroller {
