--- a/src/BlazorUI/Demo/Client/Shared/Shared/Header.razor.scss
+++ b/src/BlazorUI/Demo/Client/Shared/Shared/Header.razor.scss
@@ -6,8 +6,8 @@
 
 .header {
     top: 0;
-    z-index: 2;
     width: 100%;
+    z-index: 10001;
     position: fixed;
     backdrop-filter: blur(20px);
     box-shadow: $bit-box-shadow-1;
